--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="citc">
 <head>
+	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<script src="js/lib/angular.min.js"></script>
 	<script src="js/service-contracts.js"></script>
 	<script src="js/models.js"></script>
@@ -8,6 +9,7 @@
 	<script src="js/config.js"></script>
 </head>
 <body>
-	<div ng-view></div>
+	<h1>Clash in the Clouds Blue Ribbon Challenges</h1>
+	<div id="app-container" ng-view></div>
 </body
 </html>
