overall detail, arena detail, content
Added an overall detail screen that lists all arenas along with high
score and challenge completion
Added arena detail screens with optional images, descriptions, and a
control to view/update high score

--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@
 	<script src="js/service-contracts.js"></script>
 	<script src="js/models.js"></script>
 	<script src="js/controllers.js"></script>
+    <script src="js/json-file-data-provider.js"></script>
 	<script src="js/config.js"></script>
 </head>
 <body>
